--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,25 @@
 *{
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
 }
 .home{
-    height: 100vh;
+    /* height: 100vh; */
     width: 100%;
-    background-color: rgb(0 0 0 / 77%);
+    /* background-color: rgb(0 0 0 / 77%); */
+
+
+
+    background-image: url('../images/hero img.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
 }
 .nav{
     color: #fff;
